Fix topbar z-index

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -25,7 +25,7 @@ $font-mono: "Roboto Mono", monospace;
 }
 
 $z-popup: 3;
-$z-relative-topbar: 1;
+$z-relative-topbar: 2;
 
 @mixin fade($offset: 0.5em, $angle: 0deg, $to: transparent) {
   -webkit-mask: linear-gradient($angle, $to, black $offset);
